# IoM-python

./: .gitignore  LICENSE  MANIFEST.in  README.md  generate.py  pyproject.toml  setup.py
IoM/: __init__.py  client.py  client.pyi  config.py  exceptions.py  session.py  session.pyi
IoM/proto/clientpb/: __init__.py
IoM/proto/clientrpc/: __init__.py
IoM/proto/implantpb/: __init__.py
IoM/proto/listenerrpc/: __init__.py
IoM/proto/modulepb/: __init__.py
IoM/proto/rootpb/: __init__.py
examples/: README.md  whoami.py
